--- a/SOAP/pom.xml
+++ b/SOAP/pom.xml
@@ -30,6 +30,16 @@
             <groupId>org.springframework.ws</groupId>
             <artifactId>spring-ws-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.ws</groupId>
+            <artifactId>spring-ws-security</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-ws-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
         <!--        Other dependencies -->
         <dependency>
@@ -71,8 +81,16 @@
             <artifactId>jaxws-api</artifactId>
             <version>2.2.6</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.sun.xml.wss</groupId>
+            <artifactId>xws-security</artifactId>
+            <version>3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
