--- a/SOAP/pom.xml
+++ b/SOAP/pom.xml
@@ -16,16 +16,8 @@
 
     <dependencies>
         <!--        Spring Boot dependencies -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
 
         <!--        Spring SOAP-related dependencies -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-oxm</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.ws</groupId>
             <artifactId>spring-ws-core</artifactId>
@@ -42,6 +34,11 @@
         </dependency>
 
         <!--        Other dependencies -->
+        <!--        <dependency>-->
+        <!--            <groupId>javax.xml.crypto</groupId>-->
+        <!--            <artifactId>xmldsig</artifactId>-->
+        <!--            <version>1.0</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>wsdl4j</groupId>
             <artifactId>wsdl4j</artifactId>
@@ -51,10 +48,6 @@
             <groupId>javax.xml.soap</groupId>
             <artifactId>javax.xml.soap-api</artifactId>
             <version>1.4.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
