--- a/REST/pom.xml
+++ b/REST/pom.xml
@@ -16,7 +16,14 @@
 
     <dependencies>
         <!--        Spring Boot dependencies -->
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+        </dependency>
 
         <!--        Other dependencies -->
     </dependencies>
