swagger dependencies problem

--- a/REST/pom.xml
+++ b/REST/pom.xml
@@ -14,6 +14,7 @@
     <artifactId>REST</artifactId>
     <version>1.0</version>
 
+
     <dependencies>
         <!--        Spring Boot dependencies -->
         <dependency>
@@ -26,5 +27,20 @@
         </dependency>
 
         <!--        Other dependencies -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.fasterxml.jackson.dataformat</groupId>-->
+        <!--            <artifactId>jackson-dataformat-xml</artifactId>-->
+        <!--        </dependency>-->
     </dependencies>
+
 </project>
