--- a/REST/src/main/resources/application.yaml
+++ b/REST/src/main/resources/application.yaml
@@ -9,10 +9,27 @@ spring:
       write-dates-as-timestamps: false
   messages:
     basename: messages
-  security:
-    user:
-      name: "user"
-      password: "824a0fa4"
+  #  security:
+  #    user:
+  #      name: "user"
+  #      password: "824a0fa4"
+  h2:
+    console:
+      enabled: true
+
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+
+  data:
+    jpa:
+      repositories:
+        bootstrap-mode: default
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
 
 management:
   endpoints:
