--- a/SOAP/pom.xml
+++ b/SOAP/pom.xml
@@ -22,16 +22,16 @@
             <groupId>org.springframework.ws</groupId>
             <artifactId>spring-ws-core</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.ws</groupId>
-            <artifactId>spring-ws-security</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.security</groupId>
-                    <artifactId>spring-ws-core</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.ws</groupId>-->
+        <!--            <artifactId>spring-ws-security</artifactId>-->
+        <!--            <exclusions>-->
+        <!--                <exclusion>-->
+        <!--                    <groupId>org.springframework.security</groupId>-->
+        <!--                    <artifactId>spring-ws-core</artifactId>-->
+        <!--                </exclusion>-->
+        <!--            </exclusions>-->
+        <!--        </dependency>-->
 
         <!--        Other dependencies -->
         <!--        <dependency>-->
@@ -74,11 +74,11 @@
             <artifactId>jaxws-api</artifactId>
             <version>2.2.6</version>
         </dependency>
-        <dependency>
-            <groupId>com.sun.xml.wss</groupId>
-            <artifactId>xws-security</artifactId>
-            <version>3.0</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.sun.xml.wss</groupId>-->
+        <!--            <artifactId>xws-security</artifactId>-->
+        <!--            <version>3.0</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>javax.activation</groupId>
             <artifactId>activation</artifactId>
